# oscilloscope_rp2040

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RP2040_0_calibration.ini
.github/workflows/: deploy_firmware.yaml  dev_release.yaml  release.yaml
case/: oscilloscope_case-Lower case.stl  oscilloscope_case-Upper case.stl  oscilloscope_case.FCStd  oscilloscope_case_PLA_2h34m.gcode
src/: CMakeLists.txt  common.c  common.h  main.c  oscilloscope.c  oscilloscope.h  protocol.c  protocol.h  tusb_config.h  usb.c  usb.h  usb_common.h  usb_config.c  usb_config.h  usb_descriptors.c
udev/: 99-openhantek.rules
